// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changeAttributeFilterLimitingItemsHandler > should emit the appropriate events for changed attribute filter limiting items 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.ATTRIBUTE_FILTER_CONFIG.SET_LIMITING_ITEMS",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.ATTRIBUTE_FILTER_CONFIG.LIMITING_ITEMS_CHANGED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.CHANGED",
  },
]
`;

exports[`changeAttributeFilterLimitingItemsHandler > should emit the appropriate events when trying to update limiting items of a non-existent attribute filter 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.ATTRIBUTE_FILTER_CONFIG.SET_LIMITING_ITEMS",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.FAILED",
  },
]
`;

exports[`changeAttributeFilterLimitingItemsHandler > should set the limiting items in state to filter context 1`] = `
[
  {
    "attributeFilter": {
      "attributeElements": {
        "uris": [],
      },
      "displayForm": {
        "identifier": "f_owner.department_id",
        "type": "displayForm",
      },
      "localIdentifier": "34b4386e227544b39ed0978791b8bd50",
      "negativeSelection": true,
      "selectionMode": "multi",
      "validateElementsBy": [
        {
          "identifier": "my-metric",
          "type": "measure",
        },
      ],
    },
  },
  {
    "attributeFilter": {
      "attributeElements": {
        "uris": [],
      },
      "displayForm": {
        "identifier": "label.f_activity.subject",
        "type": "displayForm",
      },
      "localIdentifier": "4436376372e7468b81b327dca9b65ec1",
      "negativeSelection": true,
      "selectionMode": "multi",
    },
  },
]
`;
